welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: not found: value i
    if(j+i<=num){T(i+j)=T(j+i)+1}
         ^golomb:6: error: not found: value i
    if(j+i<=num){T(i+j)=T(j+i)+1}
                   ^golomb:6: error: not found: value i
    if(j+i<=num){T(i+j)=T(j+i)+1}
                            ^